@@ -1,3 +1,6 @@
+2010-05-09
+* add a script for creating a knowledgebase and fill it with some test data
+
 2010-05-05
 * add simple checks for iptables, iproute, dproxy, ez-ipupdate
 * add simple check for libusb 0.1
